--- a/LevelUp/app/src/main/res/values/colors.xml
+++ b/LevelUp/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightbluebg">#307de3</color>
+    <color name="darkbluebg">#082c5c</color>
 </resources>
