--- a/LevelUp/app/src/main/res/layout/activity_login.xml
+++ b/LevelUp/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:elevation="10dp"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -107,74 +107,17 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/formname"
-                android:layout_width="377dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                app:cardElevation="0dp"
-                app:cardMaxElevation="0dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/FormUser">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#FFFFFF">
-
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="52dp"
-                        android:layout_height="52dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="4dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/logouser" />
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:background="#FFFFFF"
-                        android:hint="Username"
-                        android:textColorHint="@color/lightbluebg"
-                        app:boxBackgroundColor="#FFFFFF"
-                        app:boxStrokeColor="@color/lightbluebg"
-                        app:endIconTint="@color/lightbluebg"
-                        app:hintTextColor="@color/lightbluebg"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView3"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:startIconTint="@color/lightbluebg">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColor="#000000"
-                            android:textColorHint="#000000" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
                 android:id="@+id/Formpassword"
                 android:layout_width="377dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 app:cardElevation="0dp"
                 app:cardMaxElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/formname">
+                app:layout_constraintTop_toBottomOf="@+id/FormUser">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -233,12 +176,12 @@
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/lightbluebg"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Sign Up"
+                android:text="Log In"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/Formpassword"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
                 app:rippleColor="@color/darkbluebg"
                 app:strokeColor="@color/darkbluebg" />
 
@@ -252,7 +195,7 @@
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="@color/white"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Login"
+                android:text="Sign Up"
                 android:textColor="@color/lightbluebg"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
@@ -275,9 +218,19 @@
                 app:layout_constraintStart_toStartOf="@+id/Signup"
                 app:layout_constraintTop_toBottomOf="@+id/Signup" />
 
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="16dp"
+                android:text="Forgot Password?"
+                android:textColor="@color/lightbluebg"
+                app:layout_constraintEnd_toEndOf="@+id/Formpassword"
+                app:layout_constraintTop_toBottomOf="@+id/Formpassword" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 
 
     <TextView
@@ -287,7 +240,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="Sign Up"
+        android:text="Log In"
         android:textColor="#000000"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -299,7 +252,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Please fill in your Credentials"
+        android:text="Please enter your id to log in"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
