--- a/LevelUp/app/src/main/res/layout/activity_forgot_password.xml
+++ b/LevelUp/app/src/main/res/layout/activity_forgot_password.xml
@@ -86,7 +86,7 @@
 
 
             <Button
-                android:id="@+id/Signup"
+                android:id="@+id/Login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
