--- a/LevelUp/app/src/main/res/layout/fragment_home.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,9 @@
         style="@style/CustomCardViewStyle"
         android:layout_width="match_parent"
         android:layout_height="570dp"
-        android:background="@drawable/background_putih"
-        app:cardCornerRadius="0dp"
+        android:layout_marginBottom="-72dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
