--- a/LevelUp/app/src/main/res/layout/cardview_recentprojects.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_recentprojects.xml
@@ -23,13 +23,17 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_margin="4dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#FFFFFF"
             app:cardCornerRadius="100dp">
 
             <ImageView
                 android:id="@+id/logoprojectimage"
                 android:layout_width="127dp"
                 android:layout_height="127dp"
+                android:background="#FFFFFF"
+                android:backgroundTint="#FFFFFF"
                 tools:srcCompat="@drawable/ic_baseline_add_24" />
         </androidx.cardview.widget.CardView>
 
