--- a/LevelUp/app/src/main/res/layout/fragment_project_overview.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_overview.xml
@@ -49,4 +49,29 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Started At"
+        app:layout_constraintStart_toStartOf="@+id/projectoverviewtv"
+        app:layout_constraintTop_toBottomOf="@+id/projectoverviewtv" />
+
+    <TextView
+        android:id="@+id/projectstarttv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/projectnotestv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:text="Important Notes"
+        app:layout_constraintStart_toStartOf="@+id/projectstarttv"
+        app:layout_constraintTop_toBottomOf="@+id/projectstarttv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
