--- a/LevelUp/app/src/main/res/layout/activity_project.xml
+++ b/LevelUp/app/src/main/res/layout/activity_project.xml
@@ -28,6 +28,7 @@
                 android:layout_height="30dp"
                 android:background="@color/lightbluebg"
                 app:itemRippleColor="#FFFFFF"
+                app:itemTextColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
