--- a/LevelUp/app/src/main/res/layout/fragment_project_teams.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_teams.xml
@@ -6,6 +6,7 @@
     tools:context=".ProjectTeams">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/projectteamsrv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
