--- a/LevelUp/app/src/main/res/layout/activity_project.xml
+++ b/LevelUp/app/src/main/res/layout/activity_project.xml
@@ -27,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:background="@color/lightbluebg"
+                app:elevation="0dp"
                 app:itemRippleColor="#FFFFFF"
                 app:itemTextColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
