--- a/LevelUp/app/src/main/res/layout/cardview_discussions.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_discussions.xml
@@ -6,11 +6,11 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="409dp"
+        android:layout_width="370dp"
         android:layout_height="300dp"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="1dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/discussiondesctv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -183,13 +183,23 @@
                 app:layout_constraintStart_toStartOf="parent">
 
 
-                <Button
-                    android:id="@+id/replydiscussionbutton"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:backgroundTint="#03A9F4"
-                    android:text="Reply"
-                    android:textSize="10sp" />
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/replydiscussionbutton"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:backgroundTint="#03A9F4"
+                        android:text="Reply"
+                        android:textSize="10sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.cardview.widget.CardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
