--- a/LevelUp/app/src/main/res/layout/fragment_project_discussion.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_discussion.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".ProjectDiscussion">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/projectdiscussionsrv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
