--- a/LevelUp/app/src/main/res/layout/cardview_tasks.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_tasks.xml
@@ -9,6 +9,7 @@
         android:layout_width="380dp"
         android:layout_height="105dp"
         android:backgroundTint="@color/lightbluebg"
+        app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
