--- a/LevelUp/app/src/main/res/layout/fragment_project_tasks.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_tasks.xml
@@ -55,7 +55,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/latetaskrv" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/upcomingtaskrv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -71,17 +71,18 @@
                 android:text="Done"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/recyclerView"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+                app:layout_constraintStart_toStartOf="@+id/upcomingtaskrv"
+                app:layout_constraintTop_toBottomOf="@+id/upcomingtaskrv" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/donetaskrv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
-                app:layout_constraintStart_toStartOf="@+id/recyclerView"
+                app:layout_constraintEnd_toEndOf="@+id/upcomingtaskrv"
+                app:layout_constraintStart_toStartOf="@+id/upcomingtaskrv"
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
