--- a/LevelUp/app/src/main/res/layout/cardview_replies.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_replies.xml
@@ -8,6 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
