--- a/LevelUp/app/src/main/res/layout/fragment_project_files.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_files.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProjectFiles" >
+    android:backgroundTint="#FFFFFF"
+    tools:context=".ProjectFiles">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/projectfilesrv"
