--- a/LevelUp/app/src/main/res/layout/fragment_project_teams.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_teams.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#FFD7D7"
     tools:context=".ProjectTeams">
 
     <androidx.recyclerview.widget.RecyclerView
