--- a/LevelUp/app/src/main/res/layout/fragment_profile.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_profile.xml
@@ -375,6 +375,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
+                        android:backgroundTint="#FFFFFF"
                         app:cardCornerRadius="15dp"
                         app:cardElevation="15dp"
                         app:cardMaxElevation="15dp"
